从源代码构建 mitaka 最新版

--- a/kolla-build.conf
+++ b/kolla-build.conf
@@ -22,7 +22,7 @@ base_tag = 7
 # Path to custom file to be added at beginning of base Dockerfile
 # (string value)
 # Deprecated group/name - [kolla-build]/include_header
-include_header = /etc/koll/include
+#include_header = /etc/koll/include
 
 # Path to custom file to be added at end of Dockerfiles for final
 # images (string value)
@@ -93,7 +93,7 @@ push = true
 
 # The Docker tag (string value)
 # Deprecated group/name - [kolla-build]/tag
-tag = 2.0.3
+tag = mitaka
 
 # Don't build images. Generate Dockerfile only (boolean value)
 # Deprecated group/name - [kolla-build]/template_only
@@ -134,14 +134,14 @@ rpm_setup_config = http://debian.ustc.edu.cn/centos/7/os/x86_64/Packages/deltarp
 # Git reference to pull, commit sha, tag or branch name (string value)
 #reference = <None>
 type = url
-location = http://git.trystack.cn/openstack/aodh.git
+location = http://github.com/openstack/aodh.git
 reference = stable/mitaka
 
 
 [ceilometer-base]
 
 type = url
-location = http://git.trystack.cn/openstack/ceilometer.git
+location = http://github.com/openstack/ceilometer.git
 reference = stable/mitaka
 #
 # From kolla
@@ -161,7 +161,7 @@ reference = stable/mitaka
 [cinder-base]
 
 type = url
-location = http://git.trystack.cn/openstack/cinder.git
+location = http://github.com/openstack/cinder.git
 reference = stable/mitaka
 #
 # From kolla
@@ -180,7 +180,7 @@ reference = stable/mitaka
 
 [designate-base]
 type = url
-location = http://git.trystack.cn/openstack/designate.git
+location = http://github.com/openstack/designate.git
 reference = stable/mitaka
 #
 # From kolla
@@ -200,7 +200,7 @@ reference = stable/mitaka
 [glance-base]
 
 type = url
-location = http://git.trystack.cn/openstack/glance.git
+location = http://github.com/openstack/glance.git
 reference = stable/mitaka
 #
 # From kolla
@@ -220,7 +220,7 @@ reference = stable/mitaka
 [gnocchi-base]
 
 type = url
-location = http://git.trystack.cn/openstack/gnocchi.git
+location = http://github.com/openstack/gnocchi.git
 reference = stable/mitaka
 #
 # From kolla
@@ -240,7 +240,7 @@ reference = stable/mitaka
 [heat-base]
 
 type = url
-location = http://git.trystack.cn/openstack/heat.git
+location = http://github.com/openstack/heat.git
 reference = stable/mitaka
 #
 # From kolla
@@ -260,7 +260,7 @@ reference = stable/mitaka
 [horizon]
 
 type = url
-location = http://git.trystack.cn/openstack/horizon.git
+location = http://github.com/openstack/horizon.git
 reference = stable/mitaka
 #
 # From kolla
@@ -280,7 +280,7 @@ reference = stable/mitaka
 [ironic-base]
 
 type = url
-location = http://git.trystack.cn/openstack/ironic.git
+location = http://github.com/openstack/ironic.git
 reference = stable/mitaka
 #
 # From kolla
@@ -300,7 +300,7 @@ reference = stable/mitaka
 [keystone]
 
 type = url
-location = http://git.trystack.cn/openstack/keystone.git
+location = http://github.com/openstack/keystone.git
 reference = stable/mitaka
 #
 # From kolla
@@ -320,7 +320,7 @@ reference = stable/mitaka
 [magnum-base]
 
 type = url
-location = http://git.trystack.cn/openstack/magnum.git
+location = http://github.com/openstack/magnum.git
 reference = stable/mitaka
 #
 # From kolla
@@ -340,7 +340,7 @@ reference = stable/mitaka
 [manila-base]
 
 type = url
-location = http://git.trystack.cn/openstack/manila.git
+location = http://github.com/openstack/manila.git
 reference = stable/mitaka
 #
 # From kolla
@@ -360,7 +360,7 @@ reference = stable/mitaka
 [mistral-base]
 
 type = url
-location = http://git.trystack.cn/openstack/mistral.git
+location = http://github.com/openstack/mistral.git
 reference = stable/mitaka
 #
 # From kolla
@@ -380,7 +380,7 @@ reference = stable/mitaka
 [murano-base]
 
 type = url
-location = http://git.trystack.cn/openstack/murano.git
+location = http://github.com/openstack/murano.git
 reference = stable/mitaka
 #
 # From kolla
@@ -400,7 +400,7 @@ reference = stable/mitaka
 [neutron-base]
 
 type = url
-location = http://git.trystack.cn/openstack/neutron.git
+location = http://github.com/openstack/neutron.git
 reference = stable/mitaka
 #
 # From kolla
@@ -420,7 +420,7 @@ reference = stable/mitaka
 [nova-base]
 
 type = url
-location = http://git.trystack.cn/openstack/nova.git
+location = http://github.com/openstack/nova.git
 reference = stable/mitaka
 #
 # From kolla
@@ -439,8 +439,8 @@ reference = stable/mitaka
 
 [nova-novncproxy]
 
-#type = url
-#location = http://git.trystack.cn/kanaka/noVNC
+type = url
+location = http://github.com/kanaka/noVNC
 #
 # From kolla
 #
@@ -464,10 +464,11 @@ reference = stable/mitaka
 
 # Source location type (string value)
 # Allowed values: local, git, url
-#type = url
+type = url
 
 # The location for source install (string value)
 #location = http://github.com/SPICE/spice-html5/tarball/spice-html5-0.1.6
+location = http://github.com/SPICE/spice-html5
 
 # Git reference to pull, commit sha, tag or branch name (string value)
 #reference = <None>
@@ -476,7 +477,7 @@ reference = stable/mitaka
 [openstack-base]
 
 type = url
-location = http://git.trystack.cn/openstack/requirements.git
+location = http://github.com/openstack/requirements.git
 reference = stable/mitaka
 #
 # From kolla
@@ -521,7 +522,7 @@ reference = stable/mitaka
 [swift-base]
 
 type = url
-location = http://git.trystack.cn/openstack/swift.git
+location = http://github.com/openstack/swift.git
 reference = stable/mitaka
 #
 # From kolla
@@ -541,7 +542,7 @@ reference = stable/mitaka
 [tempest]
 
 type = url
-location = http://git.trystack.cn/openstack/tempest.git
+location = http://github.com/openstack/tempest.git
 #
 # From kolla
 #
@@ -560,7 +561,7 @@ location = http://git.trystack.cn/openstack/tempest.git
 [trove-base]
 
 type = url
-location = http://git.trystack.cn/openstack/trove.git
+location = http://github.com/openstack/trove.git
 reference = stable/mitaka
 #
 # From kolla
@@ -580,7 +581,7 @@ reference = stable/mitaka
 [zaqar]
 
 type = url
-location = http://git.trystack.cn/openstack/zaqar.git
+location = http://github.com/openstack/zaqar.git
 reference = stable/mitaka
 #
 # From kolla
