--- a/kolla-build.conf
+++ b/kolla-build.conf
@@ -133,15 +133,15 @@ rpm_setup_config = http://debian.ustc.edu.cn/centos/7/os/x86_64/Packages/deltarp
 
 # Git reference to pull, commit sha, tag or branch name (string value)
 #reference = <None>
-type = url
-location = http://github.com/openstack/aodh.git
+type = git
+location = https://github.com/openstack/aodh.git
 reference = stable/mitaka
 
 
 [ceilometer-base]
 
-type = url
-location = http://github.com/openstack/ceilometer.git
+type = git
+location = https://github.com/openstack/ceilometer.git
 reference = stable/mitaka
 #
 # From kolla
@@ -160,8 +160,8 @@ reference = stable/mitaka
 
 [cinder-base]
 
-type = url
-location = http://github.com/openstack/cinder.git
+type = git
+location = https://github.com/openstack/cinder.git
 reference = stable/mitaka
 #
 # From kolla
@@ -179,8 +179,8 @@ reference = stable/mitaka
 
 
 [designate-base]
-type = url
-location = http://github.com/openstack/designate.git
+type = git
+location = https://github.com/openstack/designate.git
 reference = stable/mitaka
 #
 # From kolla
@@ -199,8 +199,8 @@ reference = stable/mitaka
 
 [glance-base]
 
-type = url
-location = http://github.com/openstack/glance.git
+type = git
+location = https://github.com/openstack/glance.git
 reference = stable/mitaka
 #
 # From kolla
@@ -219,8 +219,8 @@ reference = stable/mitaka
 
 [gnocchi-base]
 
-type = url
-location = http://github.com/openstack/gnocchi.git
+type = git
+location = https://github.com/openstack/gnocchi.git
 reference = stable/mitaka
 #
 # From kolla
@@ -239,8 +239,8 @@ reference = stable/mitaka
 
 [heat-base]
 
-type = url
-location = http://github.com/openstack/heat.git
+type = git
+location = https://github.com/openstack/heat.git
 reference = stable/mitaka
 #
 # From kolla
@@ -259,8 +259,8 @@ reference = stable/mitaka
 
 [horizon]
 
-type = url
-location = http://github.com/openstack/horizon.git
+type = git
+location = https://github.com/openstack/horizon.git
 reference = stable/mitaka
 #
 # From kolla
@@ -279,8 +279,8 @@ reference = stable/mitaka
 
 [ironic-base]
 
-type = url
-location = http://github.com/openstack/ironic.git
+type = git
+location = https://github.com/openstack/ironic.git
 reference = stable/mitaka
 #
 # From kolla
@@ -299,8 +299,8 @@ reference = stable/mitaka
 
 [keystone]
 
-type = url
-location = http://github.com/openstack/keystone.git
+type = git
+location = https://github.com/openstack/keystone.git
 reference = stable/mitaka
 #
 # From kolla
@@ -319,8 +319,8 @@ reference = stable/mitaka
 
 [magnum-base]
 
-type = url
-location = http://github.com/openstack/magnum.git
+type = git
+location = https://github.com/openstack/magnum.git
 reference = stable/mitaka
 #
 # From kolla
@@ -339,8 +339,8 @@ reference = stable/mitaka
 
 [manila-base]
 
-type = url
-location = http://github.com/openstack/manila.git
+type = git
+location = https://github.com/openstack/manila.git
 reference = stable/mitaka
 #
 # From kolla
@@ -359,8 +359,8 @@ reference = stable/mitaka
 
 [mistral-base]
 
-type = url
-location = http://github.com/openstack/mistral.git
+type = git
+location = https://github.com/openstack/mistral.git
 reference = stable/mitaka
 #
 # From kolla
@@ -379,8 +379,8 @@ reference = stable/mitaka
 
 [murano-base]
 
-type = url
-location = http://github.com/openstack/murano.git
+type = git
+location = https://github.com/openstack/murano.git
 reference = stable/mitaka
 #
 # From kolla
@@ -399,8 +399,8 @@ reference = stable/mitaka
 
 [neutron-base]
 
-type = url
-location = http://github.com/openstack/neutron.git
+type = git
+location = https://github.com/openstack/neutron.git
 reference = stable/mitaka
 #
 # From kolla
@@ -419,8 +419,8 @@ reference = stable/mitaka
 
 [nova-base]
 
-type = url
-location = http://github.com/openstack/nova.git
+type = git
+location = https://github.com/openstack/nova.git
 reference = stable/mitaka
 #
 # From kolla
@@ -439,7 +439,7 @@ reference = stable/mitaka
 
 [nova-novncproxy]
 
-type = url
+type = git
 location = http://github.com/kanaka/noVNC
 #
 # From kolla
@@ -464,7 +464,7 @@ location = http://github.com/kanaka/noVNC
 
 # Source location type (string value)
 # Allowed values: local, git, url
-type = url
+type = git
 
 # The location for source install (string value)
 #location = http://github.com/SPICE/spice-html5/tarball/spice-html5-0.1.6
@@ -476,7 +476,7 @@ location = http://github.com/SPICE/spice-html5
 
 [openstack-base]
 
-type = url
+type = git
 location = http://github.com/openstack/requirements.git
 reference = stable/mitaka
 #
@@ -521,7 +521,7 @@ reference = stable/mitaka
 
 [swift-base]
 
-type = url
+type = git
 location = http://github.com/openstack/swift.git
 reference = stable/mitaka
 #
@@ -541,7 +541,7 @@ reference = stable/mitaka
 
 [tempest]
 
-type = url
+type = git
 location = http://github.com/openstack/tempest.git
 #
 # From kolla
@@ -560,7 +560,7 @@ location = http://github.com/openstack/tempest.git
 
 [trove-base]
 
-type = url
+type = git
 location = http://github.com/openstack/trove.git
 reference = stable/mitaka
 #
@@ -580,7 +580,7 @@ reference = stable/mitaka
 
 [zaqar]
 
-type = url
+type = git
 location = http://github.com/openstack/zaqar.git
 reference = stable/mitaka
 #
