--- a/kolla-build.conf
+++ b/kolla-build.conf
@@ -221,7 +221,7 @@ reference = stable/mitaka
 
 type = git
 location = https://github.com/openstack/gnocchi.git
-reference = stable/mitaka
+reference = stable/2.2
 #
 # From kolla
 #
@@ -440,7 +440,8 @@ reference = stable/mitaka
 [nova-novncproxy]
 
 type = git
-location = http://github.com/kanaka/noVNC
+location = https://github.com/kanaka/noVNC.git
+reference = v0.6.1
 #
 # From kolla
 #
@@ -464,11 +465,11 @@ location = http://github.com/kanaka/noVNC
 
 # Source location type (string value)
 # Allowed values: local, git, url
-type = git
+type = url
 
 # The location for source install (string value)
-#location = http://github.com/SPICE/spice-html5/tarball/spice-html5-0.1.6
-location = http://github.com/SPICE/spice-html5
+location = http://github.com/SPICE/spice-html5/tarball/spice-html5-0.1.6
+#location = https://github.com/SPICE/spice-html5.git
 
 # Git reference to pull, commit sha, tag or branch name (string value)
 #reference = <None>
@@ -477,7 +478,7 @@ location = http://github.com/SPICE/spice-html5
 [openstack-base]
 
 type = git
-location = http://github.com/openstack/requirements.git
+location = https://github.com/openstack/requirements.git
 reference = stable/mitaka
 #
 # From kolla
@@ -522,7 +523,7 @@ reference = stable/mitaka
 [swift-base]
 
 type = git
-location = http://github.com/openstack/swift.git
+location = https://github.com/openstack/swift.git
 reference = stable/mitaka
 #
 # From kolla
@@ -542,7 +543,7 @@ reference = stable/mitaka
 [tempest]
 
 type = git
-location = http://github.com/openstack/tempest.git
+location = https://github.com/openstack/tempest.git
 #
 # From kolla
 #
@@ -561,7 +562,7 @@ location = http://github.com/openstack/tempest.git
 [trove-base]
 
 type = git
-location = http://github.com/openstack/trove.git
+location = https://github.com/openstack/trove.git
 reference = stable/mitaka
 #
 # From kolla
@@ -581,7 +582,7 @@ reference = stable/mitaka
 [zaqar]
 
 type = git
-location = http://github.com/openstack/zaqar.git
+location = https://github.com/openstack/zaqar.git
 reference = stable/mitaka
 #
 # From kolla
