可正常使用的conf

--- a/kolla-build.conf
+++ b/kolla-build.conf
@@ -468,7 +468,7 @@ reference = v0.6.1
 type = url
 
 # The location for source install (string value)
-location = http://github.com/SPICE/spice-html5/tarball/spice-html5-0.1.6
+location = https://github.com/SPICE/spice-html5/tarball/spice-html5-0.1.6
 #location = https://github.com/SPICE/spice-html5.git
 
 # Git reference to pull, commit sha, tag or branch name (string value)
@@ -542,21 +542,21 @@ reference = stable/mitaka
 
 [tempest]
 
-type = git
-location = https://github.com/openstack/tempest.git
+#type = git
+#location = https://github.com/openstack/tempest.git
 #
 # From kolla
 #
 
 # Source location type (string value)
 # Allowed values: local, git, url
-#type = url
+type = url
 
 # The location for source install (string value)
-#location = http://tarballs.openstack.org/tempest/tempest-10.0.0.tar.gz
+location = http://tarballs.openstack.org/tempest/tempest-13.0.0.tar.gz
 
 # Git reference to pull, commit sha, tag or branch name (string value)
-#reference = <None>
+#reference = 13.0.0
 
 
 [trove-base]
