删除多余字符

--- a/kolla-build.conf
+++ b/kolla-build.conf
@@ -878,5 +878,5 @@ reference = stable/newton
 # Git reference to pull, commit sha, tag or branch name (string value)
 #reference = <None>
 type = git
-location = location = https://github.com/openstack/zaqar.git
+location = https://github.com/openstack/zaqar.git
 reference = stable/newton
