dragonflow无pike版，用默认

--- a/kolla-build.conf
+++ b/kolla-build.conf
@@ -521,9 +521,9 @@ reference = stable/pike
 # Git reference to pull, commit sha, tag or branch name (string value)
 #reference = <None>
 
-type = git
-location = https://github.com/openstack/dragonflow.git
-reference = stable/pike
+#type = git
+#location = https://github.com/openstack/dragonflow.git
+#reference = stable/pike
 
 [dragonflow-user]
 
